--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="p-5 mb-4">
+    <header class="p-5 mb-4" style="text-align: center;">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <h2 id="currentDay" class="lead"></h2>
+      <p id="currentTime" class="lead"></p>
+
     </header>
+    
     <div class="container-fluid px-5">
-        
      <!-- *Use class for "past", "present", and "future" to apply styles to the
         *time-block divs accordingly. The javascript will need to do this by
         *adding/removing these classes on each div by comparing the hour in the
@@ -46,7 +48,7 @@
       <div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -55,7 +57,7 @@
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -64,7 +66,7 @@
       <div id="hour-11" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -75,6 +77,6 @@
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
