--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         *-->
 
             <!-- Example of a past time block. The "past" class adds a gray background color. -->
-            <div id="hour-9" class="row time-block past">
+            <div id="9" class="row time-block present">
                 <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
                 <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
@@ -45,7 +45,7 @@
             </div>
 
             <!-- Example of a present time block. The "present" class adds a red background color. -->
-            <div id="hour-10" class="row time-block present">
+            <div id="10" class="row time-block present">
                 <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
                 <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
@@ -54,7 +54,7 @@
             </div>
 
             <!-- Example of a future time block. The "future" class adds a green background color. -->
-            <div id="hour-11" class="row time-block future">
+            <div id="11" class="row time-block present">
                 <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
                 <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
