Feat(js): Holy Moly. Everything is functioning, local storage has been refined and working. It's a go for me.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <h2 id="currentDay" class="lead"></h2>
-        <p id="currentTime" class="lead"></p>
 
     </header>
 
@@ -31,7 +30,7 @@
          
             <div id="9" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -39,7 +38,7 @@
 
             <div id="10" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -47,7 +46,7 @@
 
             <div id="11" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -55,7 +54,7 @@
 
             <div id="12" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -63,7 +62,7 @@
 
             <div id="13" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -71,7 +70,7 @@
 
             <div id="14" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -79,7 +78,7 @@
 
             <div id="15" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -87,7 +86,7 @@
 
             <div id="16" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -95,7 +94,7 @@
 
             <div id="17" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -103,7 +102,7 @@
 
             <div id="18" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
