fix(localStorage): Fixed JS functions that allowed a true Save to Local Storage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          
             <div id="9" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="9" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -38,7 +38,7 @@
 
             <div id="10" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="10" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -46,7 +46,7 @@
 
             <div id="11" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="11" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -54,7 +54,7 @@
 
             <div id="12" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="12" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -62,7 +62,7 @@
 
             <div id="13" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="13" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -70,7 +70,7 @@
 
             <div id="14" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="14" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -78,7 +78,7 @@
 
             <div id="15" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="15" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -86,7 +86,7 @@
 
             <div id="16" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="16" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -94,7 +94,7 @@
 
             <div id="17" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="17" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
@@ -102,7 +102,7 @@
 
             <div id="18" class="row time-block">
                 <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
-                <textarea type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="18" type="text" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save" type="submit">
                     <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
